--- a/practica1.html
+++ b/practica1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head> 
     <title>Practica 1</title>
     <link type="text/css" rel="stylesheet" href="Practica.css"/> 
 </head>
@@ -9,7 +9,7 @@
 
     <h2>Aqu&iacute; tenemos la plantilla para la temporada 23/24</h2>
     
-    <!-- Lista ordenada -->
+    <!--hhh Lista ordenada -->
     <div>
         <ol>
             <li><a href="file://10.97.0.20/Home_VDI$/a.fernandezgo.2020/Documents/4%C2%BA%20Universidad/Practica%201/jugador1.html">Cristiano Ronaldo</a></li>
