--- a/practica1.html
+++ b/practica1.html
@@ -9,7 +9,7 @@
 
     <h2>Aqu&iacute; tenemos la plantilla para la temporada 23/24</h2>
     
-    <!--jdsofñjf Lista ordenada -->
+    <!-- Lista ordenada -->
     <div>
         <ol>
             <li><a href="file://10.97.0.20/Home_VDI$/a.fernandezgo.2020/Documents/4%C2%BA%20Universidad/Practica%201/jugador1.html">Cristiano Ronaldo</a></li>
@@ -25,9 +25,11 @@
         </ol>
     </div>
 
-    <h3>
-        ¡Pulse aqu&iacute; para inscribir nuevos jugadores!!
-    </h3>
+    <h3>Pagina nuevo elemento</h3>
+    <button type="button" class=""btn btn Crear nuevo elemento
+       <!-- ¡Pulse aqu&iacute; para inscribir nuevos jugadores!!-->
+
+    
 </body>
 </html>
 
