Boton Inscribir jugadores

--- a/practica1.html
+++ b/practica1.html
@@ -25,9 +25,10 @@
         </ol>
     </div>
 
-    <h3>Pagina nuevo elemento</h3>
-    <button type="button" class=""btn btn Crear nuevo elemento
-       <!-- ¡Pulse aqu&iacute; para inscribir nuevos jugadores!!-->
+    <h3>Pagina nuevo elemento
+        <a href="alvaro-f-g/Fundamentos-Web/inscribirjugadores.html"><span>Inscribir nuevos jugadores!</span></a>
+    </h3>
+    
 
     
 </body>
