--- a/practica1.html
+++ b/practica1.html
@@ -26,7 +26,7 @@
     </div>
 
     <h3>Pagina nuevo elemento
-        <a href="alvaro-f-g/Fundamentos-Web/inscribirjugadores.html"><span>Inscribir nuevos jugadores!</span></a>
+        <a href="inscribirjugadores.html"><span>Inscribir nuevos jugadores!</span></a>
     </h3>
     
 
