Redireccion de elementos

--- a/practica1.html
+++ b/practica1.html
@@ -12,20 +12,20 @@
     <!-- Lista ordenada -->
     <div>
         <ol>
-            <li><a href="file://10.97.0.20/Home_VDI$/a.fernandezgo.2020/Documents/4%C2%BA%20Universidad/Practica%201/jugador1.html">Cristiano Ronaldo</a></li>
-            <li><a href="file://10.97.0.20/Home_VDI$/a.fernandezgo.2020/Documents/4%C2%BA%20Universidad/Practica%201/jugador1.html">Vinicius Junior</a></li>
-            <li><a href="file://10.97.0.20/Home_VDI$/a.fernandezgo.2020/Documents/4%C2%BA%20Universidad/Practica%201/jugador1.html">Theo Hern&aacute;ndez</a></li>
-            <li><a href="file://10.97.0.20/Home_VDI$/a.fernandezgo.2020/Documents/4%C2%BA%20Universidad/Practica%201/jugador1.html">Isco Alarc&oacute;n</a></li>
-            <li><a href="file://10.97.0.20/Home_VDI$/a.fernandezgo.2020/Documents/4%C2%BA%20Universidad/Practica%201/jugador1.html">Xavi Simons</a></li>
-            <li><a href="file://10.97.0.20/Home_VDI$/a.fernandezgo.2020/Documents/4%C2%BA%20Universidad/Practica%201/jugador1.html">Mason Mount</a></li>
-            <li><a href="file://10.97.0.20/Home_VDI$/a.fernandezgo.2020/Documents/4%C2%BA%20Universidad/Practica%201/jugador1.html">Leo Messi</a></li>
-            <li><a href="file://10.97.0.20/Home_VDI$/a.fernandezgo.2020/Documents/4%C2%BA%20Universidad/Practica%201/jugador1.html">Jes&uacute;s Vallejo</a></li>
-            <li><a href="file://10.97.0.20/Home_VDI$/a.fernandezgo.2020/Documents/4%C2%BA%20Universidad/Practica%201/jugador1.html">&Eacute;douard Mendy</a></li>
-            <li><a href="file://10.97.0.20/Home_VDI$/a.fernandezgo.2020/Documents/4%C2%BA%20Universidad/Practica%201/jugador1.html">Achraf Hakimi</a></li>
+            <li><a href="jugador1.html">Cristiano Ronaldo</a></li>
+            <li><a href="jugador1.html">Vinicius Junior</a></li>
+            <li><a href="jugador1.html">Theo Hern&aacute;ndez</a></li>
+            <li><a href="jugador1.html">Isco Alarc&oacute;n</a></li>
+            <li><a href="jugador1.html">Xavi Simons</a></li>
+            <li><a href="jugador1.html">Mason Mount</a></li>
+            <li><a href="jugador1.html">Leo Messi</a></li>
+            <li><a href="jugador1.html">Jes&uacute;s Vallejo</a></li>
+            <li><a href="jugador1.html">&Eacute;douard Mendy</a></li>
+            <li><a href="jugador1.html">Achraf Hakimi</a></li>
         </ol>
     </div>
 
-    <h3>Pagina nuevo elemento
+    <h3>
         <a href="inscribirjugadores.html"><span>Inscribir nuevos jugadores!</span></a>
     </h3>
     
