Mejora Diseño Formulario Nueva Ficha

--- a/inscribirjugadores.html
+++ b/inscribirjugadores.html
@@ -5,9 +5,7 @@
     <link type="text/css" rel="stylesheet" href="Formulario.css"/> 
 </head>
 <body>
-    <h1>Se le mostrará un formulario para inscribir al jugador deseado</h1>
-
-    <h2>Vertical (basic) form </h2>
+    <h2>Formulario </h2>
         <form role="form">
          <div class="form-group">
          <label for="nombre">Nombre </label>
