Mejora Diseño Formulario Nueva Ficha

--- a/inscribirjugadores.html
+++ b/inscribirjugadores.html
@@ -5,7 +5,7 @@
     <link type="text/css" rel="stylesheet" href="Formulario.css"/> 
 </head>
 <body>
-    <h2>Formulario </h2>
+    <h2>Nueva Ficha </h2>
         <form role="form">
          <div class="form-group">
          <label for="nombre">Nombre </label>
