--- a/practica1.html
+++ b/practica1.html
@@ -7,10 +7,17 @@
 </head>
 
 <body>
-    <div class="top">
-        <h1>Bienvenido a la página web del Triplano FC<img src="imagenes/Escudo.jpeg" alt="Escudo del Triplano FC"></h1>
+    <header>
+        <div>
+            <img src="imagenes/Escudo.jpeg" alt="Escudo del Triplano FC">
+        </div>
+        <div>
+            <h1>Triplano FC</h1>
+        </div>
+    </header>
 
-        <h2>Aqu&iacute; tenemos la plantilla para la temporada 23/24</h2>
+    <div class="title">
+        <h2>Plantilla temporada 23/24</h2>
     </div>
 
     <!-- Lista ordenada -->
