Sección plantilla creada

--- a/practica1.html
+++ b/practica1.html
@@ -16,29 +16,31 @@
         </div>
     </header>
 
-    <div class="title">
-        <h2>Plantilla temporada 23/24</h2>
-    </div>
+    <section class="plantilla">
+        <div class="title">
+            <h2>Plantilla temporada 23/24</h2>
+        </div>
 
-    <!-- Lista ordenada -->
-    <div>
-        <ol>
-            <li><a href="jugador1.html">Cristiano Ronaldo</a></li>
-            <li><a href="jugador1.html">Vinicius Junior</a></li>
-            <li><a href="jugador1.html">Theo Hern&aacute;ndez</a></li>
-            <li><a href="jugador1.html">Isco Alarc&oacute;n</a></li>
-            <li><a href="jugador1.html">Xavi Simons</a></li>
-            <li><a href="jugador1.html">Mason Mount</a></li>
-            <li><a href="jugador1.html">Leo Messi</a></li>
-            <li><a href="jugador1.html">Jes&uacute;s Vallejo</a></li>
-            <li><a href="jugador1.html">&Eacute;douard Mendy</a></li>
-            <li><a href="jugador1.html">Achraf Hakimi</a></li>
-        </ol>
-    </div>
+        <!-- Lista ordenada -->
+        <div>
+            <ol>
+                <li><a href="jugador1.html">Cristiano Ronaldo</a></li>
+                <li><a href="jugador1.html">Vinicius Junior</a></li>
+                <li><a href="jugador1.html">Theo Hern&aacute;ndez</a></li>
+                <li><a href="jugador1.html">Isco Alarc&oacute;n</a></li>
+                <li><a href="jugador1.html">Xavi Simons</a></li>
+                <li><a href="jugador1.html">Mason Mount</a></li>
+                <li><a href="jugador1.html">Leo Messi</a></li>
+                <li><a href="jugador1.html">Jes&uacute;s Vallejo</a></li>
+                <li><a href="jugador1.html">&Eacute;douard Mendy</a></li>
+                <li><a href="jugador1.html">Achraf Hakimi</a></li>
+            </ol>
+        </div>
 
-    <h3>
-        <a href="inscribirjugadores.html"><span>Inscribir nuevos jugadores!</span></a>
-    </h3>
+        <h3>
+            <a href="inscribirjugadores.html"><span>Inscribir nuevos jugadores!</span></a>
+        </h3>
+    </section>
 
 </body>
 
