--- a/practica1.html
+++ b/practica1.html
@@ -21,20 +21,17 @@
             <h2>Plantilla temporada 23/24</h2>
         </div>
 
-        <!-- Lista ordenada -->
-        <div>
-            <ol>
-                <li><a href="jugador1.html">Cristiano Ronaldo</a></li>
-                <li><a href="jugador1.html">Vinicius Junior</a></li>
-                <li><a href="jugador1.html">Theo Hern&aacute;ndez</a></li>
-                <li><a href="jugador1.html">Isco Alarc&oacute;n</a></li>
-                <li><a href="jugador1.html">Xavi Simons</a></li>
-                <li><a href="jugador1.html">Mason Mount</a></li>
-                <li><a href="jugador1.html">Leo Messi</a></li>
-                <li><a href="jugador1.html">Jes&uacute;s Vallejo</a></li>
-                <li><a href="jugador1.html">&Eacute;douard Mendy</a></li>
-                <li><a href="jugador1.html">Achraf Hakimi</a></li>
-            </ol>
+        <div class="players">
+            <a href="jugador1.html">Cristiano Ronaldo</a>
+            <a href="jugador1.html">Vinicius Junior</a>
+            <a href="jugador1.html">Theo Hern&aacute;ndez</a>
+            <a href="jugador1.html">Isco Alarc&oacute;n</a>
+            <a href="jugador1.html">Xavi Simons</a>
+            <a href="jugador1.html">Mason Mount</a>
+            <a href="jugador1.html">Leo Messi</a>
+            <a href="jugador1.html">Jes&uacute;s Vallejo</a>
+            <a href="jugador1.html">&Eacute;douard Mendy</a>
+            <a href="jugador1.html">Achraf Hakimi</a>
         </div>
 
         <h3>
