Flexbox -> Grid + Tarjetas jugadores

--- a/practica1.html
+++ b/practica1.html
@@ -16,22 +16,52 @@
         </div>
     </header>
 
-    <section class="plantilla">
+    <section class="squad">
         <div class="title">
             <h2>Plantilla temporada 23/24</h2>
         </div>
 
         <div class="players">
-            <a href="jugador1.html">Cristiano Ronaldo</a>
-            <a href="jugador1.html">Vinicius Junior</a>
-            <a href="jugador1.html">Theo Hern&aacute;ndez</a>
-            <a href="jugador1.html">Isco Alarc&oacute;n</a>
-            <a href="jugador1.html">Xavi Simons</a>
-            <a href="jugador1.html">Mason Mount</a>
-            <a href="jugador1.html">Leo Messi</a>
-            <a href="jugador1.html">Jes&uacute;s Vallejo</a>
-            <a href="jugador1.html">&Eacute;douard Mendy</a>
-            <a href="jugador1.html">Achraf Hakimi</a>
+            <a href="jugador1.html">
+                <img src="imagenes/CRISTIANO_550x650.jpg" alt="Cristiano Ronaldo">
+                <p>Cristiano Ronaldo</p>
+            </a>
+            <a href="jugador1.html">
+                <img src="imagenes/VINICIUS_380x501Thumb.jpg" alt="Vinicius Junior">
+                <p>Vinicius Junior</p>
+            </a>
+            <a href="jugador1.html">
+                <img src="imagenes/descarga.jpg" alt="Theo Hernandez">
+                <p>Theo Hern&aacute;ndez</p>
+            </a>
+            <a href="jugador1.html">
+                <img src="imagenes/real-betis-v-rayo-vallecano-laliga-ea-sports-scaled.jpg" alt="Isco">
+                <p>Isco Alarc&oacute;n</p>
+            </a>
+            <a href="jugador1.html">
+                <img src="imagenes/i.png" alt="Xavi Simons">
+                <p>Xavi Simons</p>
+            </a>
+            <a href="jugador1.html">
+                <img src="imagenes/unnamed.jpg" alt="Mason Mount">
+                <p>Mason Mount</p>
+            </a>
+            <a href="jugador1.html">
+                <img src="imagenes/388f6bf410f011e9a2d3021976ae6e73.jpg" alt="Leo Messi">
+                <p>Leo Messi</p>
+            </a>
+            <a href="jugador1.html">
+                <img src="imagenes/jesus-vallejo-1920.jpg" alt="Jesús Vallejo">
+                <p>Jes&uacute;s Vallejo</p>
+            </a>
+            <a href="jugador1.html">
+                <img src="imagenes/956b5484-a105-4406-92a8-3d1cc0a52319_alta-libre-aspect-ratio_default_0.jpg" alt="Édouard Mendy">
+                <p>&Eacute;douard Mendy</p>
+            </a>
+            <a href="jugador1.html">
+                <img src="imagenes/328958.jpg" alt="Achraf">
+                <p>Achraf Hakimi</p>
+            </a>
         </div>
 
         <h3>
