Rediseño botón nuevo jugador

--- a/practica1.html
+++ b/practica1.html
@@ -64,9 +64,9 @@
             </a>
         </div>
 
-        <h3>
-            <a href="inscribirjugadores.html"><span>Inscribir nuevos jugadores!</span></a>
-        </h3>
+        <div class="button">
+            <a href="inscribirjugadores.html">Inscribir nuevo jugador</a>
+        </div>
     </section>
 
 </body>
