--- a/practica1.html
+++ b/practica1.html
@@ -9,12 +9,15 @@
 <body>
     <header>
         <div>
-            <img src="imagenes/Escudo.jpeg" alt="Escudo del Triplano FC">
+            <img id="header-img" src="imagenes/Escudo.jpeg" alt="Escudo del Triplano FC">
         </div>
         <div>
             <h1>Triplano FC</h1>
         </div>
     </header>
+
+    <!-- Evita que el resto de contenido suba y sea tapado por la cabecera -->
+    <div class="header-fake"></div>
 
     <section class="squad">
         <div class="title">
