Ficha para cada jugador
Realmente no hace falta, solo necesitamos una ficha, pero al menos así
queda reflejado como se vería aplicando bien la clase

--- a/jugador1.html
+++ b/jugador1.html
@@ -5,6 +5,7 @@
     <link type="text/css" rel="stylesheet" href="stylefichas.css"/> 
 </head>
 <body>
+    </div>
     <div class="ficha">
         <h2>Cristiano Ronaldo dos Santos Aveiro</h2>
         <img src="imagenes/CRISTIANO_550x650.jpg" alt="Cristiano Ronaldo">
@@ -12,63 +13,72 @@
         <p><strong>Fecha de Nacimiento:</strong> 5 de febrero de 1985</p>
         <p><strong>Nacionalidad:</strong> Portugués</p>
         <p><strong>Número de Camiseta:</strong> 7</p>
-
+    </div>
+    <div class="ficha">
         <h2>Vinicius José Paixao de Oliveira Junior</h2>
         <img src="imagenes/VINICIUS_380x501Thumb.jpg" alt="Vinicius Junior">
         <p><strong>Posición:</strong> Delantero</p>
         <p><strong>Fecha de Nacimiento:</strong> 12 de Julio de 2000</p>
         <p><strong>Nacionalidad:</strong> Brasileño</p>
         <p><strong>Número de Camiseta:</strong> 7</p>
-
+    </div>
+    <div class="ficha">
         <h2>Theo Bernard Francois Hernández</h2>
         <img src="imagenes/descarga.jpg" alt="Theo Hernandez">
         <p><strong>Posición:</strong> Defensa</p>
         <p><strong>Fecha de Nacimiento:</strong> 6 de Octubre de 1997</p>
         <p><strong>Nacionalidad:</strong> Francés</p>
         <p><strong>Número de Camiseta:</strong> 19</p>
-
+    </div>
+    <div class="ficha">
         <h2>Francisco Román Alarcón Suárez</h2>
         <img src="imagenes/real-betis-v-rayo-vallecano-laliga-ea-sports-scaled.jpg" alt="Isco">
         <p><strong>Posición:</strong> Centrocampista</p>
         <p><strong>Fecha de Nacimiento:</strong> 21 de Abril de 1992</p>
         <p><strong>Nacionalidad:</strong> Española</p>
         <p><strong>Número de Camiseta:</strong> 22</p>
-
+    </div>
+    <div class="ficha">
         <h2>Xavier Quentin Shay Simons</h2>
         <img src="imagenes/i.png" alt="Xavi Simons">
         <p><strong>Posición:</strong> Centrocampista</p>
         <p><strong>Fecha de Nacimiento:</strong> 21 de Abril de 2003</p>
         <p><strong>Nacionalidad:</strong> Neerland&eacute;s</p>
         <p><strong>Número de Camiseta:</strong> 20</p>
-
+    </div>
+    <div class="ficha">
         <h2>Mason Tony Mount</h2>
         <img src="imagenes/unnamed.jpg" alt="Xavi Simons">
         <p><strong>Posición:</strong> Centrocampista</p>
         <p><strong>Fecha de Nacimiento:</strong> 10 de Enero de 1999</p>
         <p><strong>Nacionalidad:</strong> Ingl&eacute;s</p>
         <p><strong>Número de Camiseta:</strong> 7</p>
-
+    </div>
+    <div class="ficha">
         <h2>Lionel Andrés Messi Cuticcini</h2>
         <img src="imagenes/388f6bf410f011e9a2d3021976ae6e73.jpg" alt="Leo Messi">
         <p><strong>Posición:</strong> Delantero</p>
         <p><strong>Fecha de Nacimiento:</strong> 24 de Junio de 1987</p>
         <p><strong>Nacionalidad:</strong> Argentino</p>
         <p><strong>Número de Camiseta:</strong> 10</p>
-
+    </div>
+    <div class="ficha">
         <h2>Jesús Vallejo Lázaro</h2>
         <img src="imagenes/jesus-vallejo-1920.jpg" alt="Jesús Vallejo">
         <p><strong>Posición:</strong> Defensa</p>
         <p><strong>Fecha de Nacimiento:</strong> 5 de Enero de 1997</p>
         <p><strong>Nacionalidad:</strong> Espa&ntilde;ola</p>
         <p><strong>Número de Camiseta:</strong> 5</p>
-
+    </div>
+    <div class="ficha">
         <h2>Édouard Osoque Mendy</h2>
         <img src="imagenes/956b5484-a105-4406-92a8-3d1cc0a52319_alta-libre-aspect-ratio_default_0.jpg" alt="Édouard Mendy">
         <p><strong>Posición:</strong> Portero</p>
         <p><strong>Fecha de Nacimiento:</strong> 1 de Marzo de 1992</p>
         <p><strong>Nacionalidad:</strong> Senegal&eacute;s</p>
         <p><strong>Número de Camiseta:</strong> 16</p>
-
+    </div>
+    <div class="ficha">
         <h2>Achraf Hakimi Mouh</h2>
         <img src="imagenes/328958.jpg" alt="Achraf">
         <p><strong>Posición:</strong> Defensa</p>
