Cambio de nombres
Este debería haber sido mi primer commit

--- a/ficha.html
+++ b/ficha.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Ficha de Cristiano Ronaldo</title>
-    <link type="text/css" rel="stylesheet" href="stylefichas.css" />
+    <link type="text/css" rel="stylesheet" href="ficha.css" />
 </head>
 
 <body>
