--- a/plantilla.html
+++ b/plantilla.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Practica 1</title>
-    <link type="text/css" rel="stylesheet" href="Practica.css" />
+    <link type="text/css" rel="stylesheet" href="plantilla.css" />
 </head>
 
 <body>
@@ -25,50 +25,50 @@
         </div>
 
         <div class="players">
-            <a href="jugador1.html">
+            <a href="ficha.html">
                 <img src="imagenes/CRISTIANO_550x650.jpg" alt="Cristiano Ronaldo">
                 <p>Cristiano Ronaldo</p>
             </a>
-            <a href="jugador1.html">
+            <a href="ficha.html">
                 <img src="imagenes/VINICIUS_380x501Thumb.jpg" alt="Vinicius Junior">
                 <p>Vinicius Junior</p>
             </a>
-            <a href="jugador1.html">
+            <a href="ficha.html">
                 <img src="imagenes/descarga.jpg" alt="Theo Hernandez">
                 <p>Theo Hern&aacute;ndez</p>
             </a>
-            <a href="jugador1.html">
+            <a href="ficha.html">
                 <img src="imagenes/real-betis-v-rayo-vallecano-laliga-ea-sports-scaled.jpg" alt="Isco">
                 <p>Isco Alarc&oacute;n</p>
             </a>
-            <a href="jugador1.html">
+            <a href="ficha.html">
                 <img src="imagenes/i.png" alt="Xavi Simons">
                 <p>Xavi Simons</p>
             </a>
-            <a href="jugador1.html">
+            <a href="ficha.html">
                 <img src="imagenes/unnamed.jpg" alt="Mason Mount">
                 <p>Mason Mount</p>
             </a>
-            <a href="jugador1.html">
+            <a href="ficha.html">
                 <img src="imagenes/388f6bf410f011e9a2d3021976ae6e73.jpg" alt="Leo Messi">
                 <p>Leo Messi</p>
             </a>
-            <a href="jugador1.html">
+            <a href="ficha.html">
                 <img src="imagenes/jesus-vallejo-1920.jpg" alt="Jesús Vallejo">
                 <p>Jes&uacute;s Vallejo</p>
             </a>
-            <a href="jugador1.html">
+            <a href="ficha.html">
                 <img src="imagenes/956b5484-a105-4406-92a8-3d1cc0a52319_alta-libre-aspect-ratio_default_0.jpg" alt="Édouard Mendy">
                 <p>&Eacute;douard Mendy</p>
             </a>
-            <a href="jugador1.html">
+            <a href="ficha.html">
                 <img src="imagenes/328958.jpg" alt="Achraf">
                 <p>Achraf Hakimi</p>
             </a>
         </div>
 
         <div class="button">
-            <a href="inscribirjugadores.html">Inscribir nuevo jugador</a>
+            <a href="formulario.html">Inscribir nuevo jugador</a>
         </div>
     </section>
 
