--- a/plantilla.html
+++ b/plantilla.html
@@ -67,9 +67,9 @@
             </a>
         </div>
 
-        <div class="button">
+        <button type="button" class="btn">
             <a href="formulario.html">Inscribir nuevo jugador</a>
-        </div>
+        </button>
     </section>
 
 </body>
