--- a/ficha.html
+++ b/ficha.html
@@ -3,13 +3,27 @@
 
 <head>
     <title>Ficha de Cristiano Ronaldo</title>
+    <link type="text/css" rel="stylesheet" href="base.css" />
     <link type="text/css" rel="stylesheet" href="ficha.css" />
 </head>
 
 <body>
-    </div>
-    <div class="ficha">
-        <h2>Cristiano Ronaldo dos Santos Aveiro</h2>
+    <header>
+        <div>
+            <img id="header-img" src="imagenes/Escudo.jpeg" alt="Escudo del Triplano FC">
+        </div>
+        <div>
+            <h1>Triplano FC</h1>
+        </div>
+    </header>
+
+    <!-- Evita que el resto de contenido suba y sea tapado por la cabecera -->
+    <div class="header-fake"></div>
+
+    <div class="container">
+        <div class="title">
+            <h2>Cristiano Ronaldo dos Santos Aveiro</h2>
+        </div>
         <img src="imagenes/CRISTIANO_550x650.jpg" alt="Cristiano Ronaldo">
         <p><strong>Posición:</strong> Delantero</p>
         <p><strong>Fecha de Nacimiento:</strong> 5 de febrero de 1985</p>
