--- a/plantilla.html
+++ b/plantilla.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Practica 1</title>
+    <link type="text/css" rel="stylesheet" href="base.css" />
     <link type="text/css" rel="stylesheet" href="plantilla.css" />
 </head>
 
@@ -19,7 +20,7 @@
     <!-- Evita que el resto de contenido suba y sea tapado por la cabecera -->
     <div class="header-fake"></div>
 
-    <section class="squad">
+    <section class="container">
         <div class="title">
             <h2>Plantilla temporada 23/24</h2>
         </div>
