Botones de la ficha

--- a/ficha.html
+++ b/ficha.html
@@ -29,6 +29,16 @@
         <p><strong>Fecha de Nacimiento:</strong> 5 de febrero de 1985</p>
         <p><strong>Nacionalidad:</strong> Portugués</p>
         <p><strong>Número de Camiseta:</strong> 7</p>
+
+        <button type="button" class="btn">
+            <a>Editar</a>
+        </button>
+        <button type="button" class="btn">
+            <a>Eliminar</a>
+        </button>
+        <button type="button" class="btn">
+            <a href="plantilla.html">Volver</a>
+        </button>
     </div>
 </body>
 
