Ficha + Historial en Flexbox
Hasta aquí tenía hecho de ayer en clase, pero lo que dije, antes necesitaba arreglar el margen de la cabecera

--- a/ficha.html
+++ b/ficha.html
@@ -20,25 +20,33 @@
     <!-- Evita que el resto de contenido suba y sea tapado por la cabecera -->
     <div class="header-fake"></div>
 
-    <div class="container">
-        <div class="title">
-            <h2>Cristiano Ronaldo dos Santos Aveiro</h2>
-        </div>
-        <img src="imagenes/CRISTIANO_550x650.jpg" alt="Cristiano Ronaldo">
-        <p><strong>Posición:</strong> Delantero</p>
-        <p><strong>Fecha de Nacimiento:</strong> 5 de febrero de 1985</p>
-        <p><strong>Nacionalidad:</strong> Portugués</p>
-        <p><strong>Número de Camiseta:</strong> 7</p>
+    <div class="data">
+        <div class="container">
+            <div class="title">
+                <h2>Cristiano Ronaldo dos Santos Aveiro</h2>
+            </div>
+            <img src="imagenes/CRISTIANO_550x650.jpg" alt="Cristiano Ronaldo">
+            <p><strong>Posición:</strong> Delantero</p>
+            <p><strong>Fecha de Nacimiento:</strong> 5 de febrero de 1985</p>
+            <p><strong>Nacionalidad:</strong> Portugués</p>
+            <p><strong>Número de Camiseta:</strong> 7</p>
 
-        <button type="button" class="btn">
-            <a>Editar</a>
-        </button>
-        <button type="button" class="btn">
-            <a>Eliminar</a>
-        </button>
-        <button type="button" class="btn">
-            <a href="plantilla.html">Volver</a>
-        </button>
+            <button type="button" class="btn">
+                <a>Editar</a>
+            </button>
+            <button type="button" class="btn">
+                <a>Eliminar</a>
+            </button>
+            <button type="button" class="btn">
+                <a href="plantilla.html">Volver</a>
+            </button>
+        </div>
+
+        <div class="container">
+            <div class="title">
+                <h2>Historial de equipos</h2>
+            </div>
+        </div>
     </div>
 </body>
 
