Tabla de equipos

--- a/ficha.html
+++ b/ficha.html
@@ -46,6 +46,40 @@
             <div class="title">
                 <h2>Historial de equipos</h2>
             </div>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Club</th>
+                        <th>Temporadas</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Sporting CP</td>
+                        <td>2002-03</td>
+                    </tr>
+                    <tr>
+                        <td>Manchester United</td>
+                        <td>2003-09</td>
+                    </tr>
+                    <tr>
+                        <td>Real Madrid CF</td>
+                        <td>2009-18</td>
+                    </tr>
+                    <tr>
+                        <td>Juventus FC</td>
+                        <td>2018-22</td>
+                    </tr>
+                    <tr>
+                        <td>Manchester United</td>
+                        <td>2021-22</td>
+                    </tr>
+                    <tr>
+                        <td>Al-Nassr FC</td>
+                        <td>2022-24</td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </body>
