Aspecto de la tabla mejorado
Hay que mirar lo del height y me da la sensación de que hay más relleno por arriba de los escudos que por abajo.

--- a/ficha.html
+++ b/ficha.html
@@ -49,33 +49,64 @@
             <table>
                 <thead>
                     <tr>
+                        <th>Escudo</th>
                         <th>Club</th>
-                        <th>Temporadas</th>
+                        <th>Etapa</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Sporting CP</td>
+                        <td>
+                            <div class="item">
+                                <img src="imagenes/Teams/Sporting_Lisboa.png" alt="Sporting Lisboa" class="tbl_img">
+                            </div>
+                        </td>
+                        <td>Sporting de Lisboa</td>
                         <td>2002-03</td>
                     </tr>
                     <tr>
+                        <td>
+                            <div class="item">
+                                <img src="imagenes/Teams/Manchester_United.png" alt="Manchester United" class="tbl_img">
+                            </div>
+                        </td>
                         <td>Manchester United</td>
                         <td>2003-09</td>
                     </tr>
                     <tr>
-                        <td>Real Madrid CF</td>
+                        <td>
+                            <div class="item">
+                                <img src="imagenes/Teams/Real_Madrid.png" alt="Real Madrid" class="tbl_img">
+                            </div>
+                        </td>
+                        <td>Real Madrid</td>
                         <td>2009-18</td>
                     </tr>
                     <tr>
-                        <td>Juventus FC</td>
+                        <td>
+                            <div class="item">
+                                <img src="imagenes/Teams/Juventus.png" alt="Juventus" class="tbl_img">
+                            </div>
+                        </td>
+                        <td>Juventus</td>
                         <td>2018-22</td>
                     </tr>
                     <tr>
+                        <td>
+                            <div class="item">
+                                <img src="imagenes/Teams/Manchester_United.png" alt="Manchester United" class="tbl_img">
+                            </div>
+                        </td>
                         <td>Manchester United</td>
                         <td>2021-22</td>
                     </tr>
                     <tr>
-                        <td>Al-Nassr FC</td>
+                        <td>
+                            <div class="item">
+                                <img src="imagenes/Teams/Al-Nassr.png" alt="Al-Nassr" class="tbl_img">
+                            </div>
+                        </td>
+                        <td>Al-Nassr</td>
                         <td>2022-24</td>
                     </tr>
                 </tbody>
