--- a/plantilla.html
+++ b/plantilla.html
@@ -27,43 +27,43 @@
 
         <div class="players">
             <a href="ficha.html">
-                <img src="imagenes/CRISTIANO_550x650.jpg" alt="Cristiano Ronaldo">
+                <img src="imagenes/CristianoRonaldo.jpg" alt="Cristiano Ronaldo">
                 <p>Cristiano Ronaldo</p>
             </a>
             <a href="ficha.html">
-                <img src="imagenes/VINICIUS_380x501Thumb.jpg" alt="Vinicius Junior">
+                <img src="imagenes/Vinicius.jpg" alt="Vinicius Junior">
                 <p>Vinicius Junior</p>
             </a>
             <a href="ficha.html">
-                <img src="imagenes/descarga.jpg" alt="Theo Hernandez">
+                <img src="imagenes/TheoHernandez.png" alt="Theo Hernandez">
                 <p>Theo Hern&aacute;ndez</p>
             </a>
             <a href="ficha.html">
-                <img src="imagenes/real-betis-v-rayo-vallecano-laliga-ea-sports-scaled.jpg" alt="Isco">
+                <img src="imagenes/Isco.png" alt="Isco">
                 <p>Isco Alarc&oacute;n</p>
             </a>
             <a href="ficha.html">
-                <img src="imagenes/i.png" alt="Xavi Simons">
-                <p>Xavi Simons</p>
+                <img src="imagenes/Bellingham.png" alt="Jude Bellingham">
+                <p>Jude Bellingham</p>
             </a>
             <a href="ficha.html">
-                <img src="imagenes/unnamed.jpg" alt="Mason Mount">
+                <img src="imagenes/MasonMount.png" alt="Mason Mount">
                 <p>Mason Mount</p>
             </a>
             <a href="ficha.html">
-                <img src="imagenes/388f6bf410f011e9a2d3021976ae6e73.jpg" alt="Leo Messi">
+                <img src="imagenes/Messi.png" alt="Leo Messi">
                 <p>Leo Messi</p>
             </a>
             <a href="ficha.html">
-                <img src="imagenes/jesus-vallejo-1920.jpg" alt="Jesús Vallejo">
+                <img src="imagenes/Vallejo.png" alt="Jesús Vallejo">
                 <p>Jes&uacute;s Vallejo</p>
             </a>
             <a href="ficha.html">
-                <img src="imagenes/956b5484-a105-4406-92a8-3d1cc0a52319_alta-libre-aspect-ratio_default_0.jpg" alt="Édouard Mendy">
-                <p>&Eacute;douard Mendy</p>
+                <img src="imagenes/RobertSanchez.png" alt="Robert Sanchez">
+                <p>Robert S&aacute;nchez</p>
             </a>
             <a href="ficha.html">
-                <img src="imagenes/328958.jpg" alt="Achraf">
+                <img src="imagenes/Achraf.jpg" alt="Achraf">
                 <p>Achraf Hakimi</p>
             </a>
         </div>
