Ficha de Cristiano mejorada

--- a/ficha.html
+++ b/ficha.html
@@ -25,7 +25,7 @@
             <div class="title">
                 <h2>Cristiano Ronaldo dos Santos Aveiro</h2>
             </div>
-            <img src="imagenes/CristianoRonaldo.jpg" alt="Cristiano Ronaldo">
+            <img src="imagenes/CristianoRonaldo.png" alt="Cristiano Ronaldo">
             <p><strong>Posición:</strong> Delantero</p>
             <p><strong>Fecha de Nacimiento:</strong> 5 de febrero de 1985</p>
             <p><strong>Nacionalidad:</strong> Portugués</p>
