--- a/plantilla.html
+++ b/plantilla.html
@@ -27,7 +27,7 @@
 
         <div class="players">
             <a href="ficha.html">
-                <img src="imagenes/CristianoRonaldo.jpg" alt="Cristiano Ronaldo">
+                <img src="imagenes/CristianoRonaldo.png" alt="Cristiano Ronaldo">
                 <p>Cristiano Ronaldo</p>
             </a>
             <a href="ficha.html">
