Fotos de jugadores en carpeta

--- a/plantilla.html
+++ b/plantilla.html
@@ -27,43 +27,43 @@
 
         <div class="players">
             <a href="ficha.html">
-                <img src="imagenes/CristianoRonaldo.png" alt="Cristiano Ronaldo">
+                <img src="imagenes/players/CristianoRonaldo.png" alt="Cristiano Ronaldo">
                 <p>Cristiano Ronaldo</p>
             </a>
             <a href="ficha.html">
-                <img src="imagenes/Vinicius.jpg" alt="Vinicius Junior">
+                <img src="imagenes/players/Vinicius.jpg" alt="Vinicius Junior">
                 <p>Vinicius Junior</p>
             </a>
             <a href="ficha.html">
-                <img src="imagenes/TheoHernandez.png" alt="Theo Hernandez">
+                <img src="imagenes/players/TheoHernandez.png" alt="Theo Hernandez">
                 <p>Theo Hern&aacute;ndez</p>
             </a>
             <a href="ficha.html">
-                <img src="imagenes/Isco.png" alt="Isco">
+                <img src="imagenes/players/Isco.png" alt="Isco">
                 <p>Isco Alarc&oacute;n</p>
             </a>
             <a href="ficha.html">
-                <img src="imagenes/Bellingham.png" alt="Jude Bellingham">
+                <img src="imagenes/players/Bellingham.png" alt="Jude Bellingham">
                 <p>Jude Bellingham</p>
             </a>
             <a href="ficha.html">
-                <img src="imagenes/MasonMount.png" alt="Mason Mount">
+                <img src="imagenes/players/MasonMount.png" alt="Mason Mount">
                 <p>Mason Mount</p>
             </a>
             <a href="ficha.html">
-                <img src="imagenes/Messi.png" alt="Leo Messi">
+                <img src="imagenes/players/Messi.png" alt="Leo Messi">
                 <p>Leo Messi</p>
             </a>
             <a href="ficha.html">
-                <img src="imagenes/Vallejo.png" alt="Jesús Vallejo">
+                <img src="imagenes/players/Vallejo.png" alt="Jesús Vallejo">
                 <p>Jes&uacute;s Vallejo</p>
             </a>
             <a href="ficha.html">
-                <img src="imagenes/RobertSanchez.png" alt="Robert Sanchez">
+                <img src="imagenes/players/RobertSanchez.png" alt="Robert Sanchez">
                 <p>Robert S&aacute;nchez</p>
             </a>
             <a href="ficha.html">
-                <img src="imagenes/Achraf.jpg" alt="Achraf">
+                <img src="imagenes/players/Achraf.jpg" alt="Achraf">
                 <p>Achraf Hakimi</p>
             </a>
         </div>
