--- a/ficha.html
+++ b/ficha.html
@@ -25,7 +25,7 @@
             <div class="title">
                 <h2>Cristiano Ronaldo dos Santos Aveiro</h2>
             </div>
-            <img src="imagenes/CristianoRonaldo.png" alt="Cristiano Ronaldo">
+            <img src="imagenes/players/CristianoRonaldo.png" alt="Cristiano Ronaldo">
             <p><strong>Posición:</strong> Delantero</p>
             <p><strong>Fecha de Nacimiento:</strong> 5 de febrero de 1985</p>
             <p><strong>Nacionalidad:</strong> Portugués</p>
@@ -58,7 +58,7 @@
                     <tr>
                         <td>
                             <div class="item">
-                                <img src="imagenes/Teams/Sporting_Lisboa.png" alt="Sporting Lisboa" class="tbl_img">
+                                <img src="imagenes/teams/Sporting_Lisboa.png" alt="Sporting Lisboa" class="tbl_img">
                             </div>
                         </td>
                         <td>Sporting de Lisboa</td>
@@ -67,7 +67,7 @@
                     <tr>
                         <td>
                             <div class="item">
-                                <img src="imagenes/Teams/Manchester_United.png" alt="Manchester United" class="tbl_img">
+                                <img src="imagenes/teams/Manchester_United.png" alt="Manchester United" class="tbl_img">
                             </div>
                         </td>
                         <td>Manchester United</td>
@@ -76,7 +76,7 @@
                     <tr>
                         <td>
                             <div class="item">
-                                <img src="imagenes/Teams/Real_Madrid.png" alt="Real Madrid" class="tbl_img">
+                                <img src="imagenes/teams/Real_Madrid.png" alt="Real Madrid" class="tbl_img">
                             </div>
                         </td>
                         <td>Real Madrid</td>
@@ -85,7 +85,7 @@
                     <tr>
                         <td>
                             <div class="item">
-                                <img src="imagenes/Teams/Juventus.png" alt="Juventus" class="tbl_img">
+                                <img src="imagenes/teams/Juventus.png" alt="Juventus" class="tbl_img">
                             </div>
                         </td>
                         <td>Juventus</td>
@@ -94,7 +94,7 @@
                     <tr>
                         <td>
                             <div class="item">
-                                <img src="imagenes/Teams/Manchester_United.png" alt="Manchester United" class="tbl_img">
+                                <img src="imagenes/teams/Manchester_United.png" alt="Manchester United" class="tbl_img">
                             </div>
                         </td>
                         <td>Manchester United</td>
@@ -103,7 +103,7 @@
                     <tr>
                         <td>
                             <div class="item">
-                                <img src="imagenes/Teams/Al-Nassr.png" alt="Al-Nassr" class="tbl_img">
+                                <img src="imagenes/teams/Al-Nassr.png" alt="Al-Nassr" class="tbl_img">
                             </div>
                         </td>
                         <td>Al-Nassr</td>
