--- a/formulario.html
+++ b/formulario.html
@@ -62,7 +62,7 @@
             </div>
             <div class="form-group">
                 <label for="N&uacute;mero de camiseta">N&uacute;mero de camiseta </label>
-                <input type="password" class="form-control" id="pwd"
+                <input type="number" class="form-control" id="numero"
                     placeholder=" D&iacute;game el n&uacute;mero de camiseta">
             </div>
            
