--- a/ficha.html
+++ b/ficha.html
@@ -108,6 +108,30 @@
                     </tr>
                 </tbody>
             </table>
+            <h3>Formulario nuevo jugador</h3>
+            <div class="new_team">
+                <div>
+                    Escudo
+                </div>
+                <div>
+                    <input type="file">
+                </div>
+                <div>
+                    Club
+                </div>
+                <div>
+                    <input type="text">
+                </div>
+                <div>
+                    Etapa
+                </div>
+                <div>
+                    <input type="text">
+                </div>
+            </div>
+            <button type="button" class="btn">
+                <a>Crear</a>
+            </button>
         </div>
     </div>
 </body>
