Formulario nuevo club mejorado

--- a/ficha.html
+++ b/ficha.html
@@ -43,7 +43,7 @@
             <div class="title">
                 <h2>Historial de equipos</h2>
             </div>
-            <table>
+            <table class="teams">
                 <thead>
                     <tr>
                         <th>Escudo</th>
@@ -108,29 +108,34 @@
                     </tr>
                 </tbody>
             </table>
-            <h3>Formulario nuevo jugador</h3>
-            <div class="new_team">
-                <div>
-                    Escudo
-                </div>
-                <div>
-                    <input type="file">
-                </div>
-                <div>
-                    Club
-                </div>
-                <div>
-                    <input type="text">
-                </div>
-                <div>
-                    Etapa
-                </div>
-                <div>
-                    <input type="text">
-                </div>
-            </div>
+            <table class="player-form">
+                <tr>
+                    <td>
+                        Escudo
+                    </td>
+                    <td>
+                        <input type="file">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Club
+                    </td>
+                    <td>
+                        <input type="text">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Etapa
+                    </td>
+                    <td>
+                        <input type="text">
+                    </td>
+                </tr>
+            </table>
             <button type="button" class="btn">
-                <a>Crear</a>
+                <a>Añadir nuevo equipo</a>
             </button>
         </div>
     </div>
