--- a/ficha.html
+++ b/ficha.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Ficha de Cristiano Ronaldo</title>
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="base.css" />
     <link type="text/css" rel="stylesheet" href="ficha.css" />
 </head>
