--- a/plantilla.html
+++ b/plantilla.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Practica 1</title>
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="base.css" />
     <link type="text/css" rel="stylesheet" href="plantilla.css" />
 </head>
