--- a/ficha.html
+++ b/ficha.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Ficha de Cristiano Ronaldo</title>
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="base.css" />
     <link type="text/css" rel="stylesheet" href="ficha.css" />
@@ -30,15 +30,9 @@
             <p><strong>Nacionalidad:</strong> Portugués</p>
             <p><strong>Número de Camiseta:</strong> 7</p>
 
-            <button type="button" class="btn">
-                <a>Editar</a>
-            </button>
-            <button type="button" class="btn">
-                <a>Eliminar</a>
-            </button>
-            <button type="button" class="btn">
-                <a href="plantilla.html">Volver</a>
-            </button>
+            <button type="button" class="btn">Editar</button>
+            <button type="button" class="btn">Eliminar</button>
+            <a href="plantilla.html" class="btn" role="button">Volver</a>
         </div>
 
         <div class="container">
@@ -136,9 +130,7 @@
                     </td>
                 </tr>
             </table>
-            <button type="button" class="btn">
-                <a>Añadir nuevo equipo</a>
-            </button>
+            <button type="button" class="btn">Añadir nuevo equipo</button>
         </div>
     </div>
 </body>
