--- a/plantilla.html
+++ b/plantilla.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Practica 1</title>
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="base.css" />
     <link type="text/css" rel="stylesheet" href="plantilla.css" />
@@ -67,9 +67,7 @@
             </a>
         </div>
 
-        <button type="button" class="btn">
-            <a href="formulario.html">Inscribir nuevo jugador</a>
-        </button>
+        <a href="formulario.html" class="btn" role="btn">Inscribir nuevo jugador</a>
     </section>
 
 </body>
