Nuevo equipo table -> form

--- a/ficha.html
+++ b/ficha.html
@@ -104,32 +104,20 @@
                     </tr>
                 </tbody>
             </table>
-            <table class="player-form">
-                <tr>
-                    <td>
-                        Escudo
-                    </td>
-                    <td>
-                        <input type="file">
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Club
-                    </td>
-                    <td>
-                        <input type="text">
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Etapa
-                    </td>
-                    <td>
-                        <input type="text">
-                    </td>
-                </tr>
-            </table>
+            <form role="form">
+                <div class="form-group">
+                    <label for="emblem">Escudo</label>
+                    <input type="file" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="team">Club</label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="stage">Etapa</label>
+                    <input type="text" class="form-control">
+                </div>
+            </form>
             <button type="button" class="btn">Añadir nuevo equipo</button>
         </div>
     </div>
